--- a/Lenguaje de Marcas/PracticaCSS3/css/styles.css
+++ b/Lenguaje de Marcas/PracticaCSS3/css/styles.css
@@ -30,7 +30,7 @@ body {
 
 .connect-friends {
     text-align: left;
-    margin: -2rem -25rem 5rem;
+    margin: -32px -400px 80px;
     margin-top: -855px;
     margin-left: -119px;
     font-size: 52px;
@@ -44,8 +44,8 @@ body {
 .form {
     width: 745px;
     height: 640px;
-    padding: 1rem;
-    margin: -9rem 39rem 1rem;
+    padding: 16px;
+    margin: -144px 624px 16px;
     background-color: #fff;
     border-radius: 7px;
     box-shadow: 1px 1px 10px rgb(117 116 116 / 22%);
@@ -54,7 +54,8 @@ body {
 .form input[type="text"],
 .form input[type="password"],
 .form input[type="submit"] {
-    padding: 1rem;
+    padding: 16px;
+    padding-left: 33.12px;
     width: 95%;
     height: 96px;
     margin: 17px 18px 29px;
@@ -71,9 +72,9 @@ body {
 }
 
 .form input[type="submit"]{
-    background-color: hsl(214, 89%, 52%);
+    background-color: #1776F1;
     text-align: center;
-    padding: 0.9rem 0.5rem;
+    padding: 14.4px 8px;
     font-weight: 600;
     font-size: 34px;
     margin-top: 15px;
@@ -82,7 +83,7 @@ body {
 }
 
 .form input[type="submit"]:hover{
-    background-color: hsl(214, 77%, 35%);
+    background-color: #14509D;
 }
 
 
@@ -117,7 +118,7 @@ body {
     margin: auto;
     margin-top: 35px;
     background-color: #42b72a;
-    padding: 0.9rem 0.3rem;
+    padding: 14.4px 4.8px;
     border-radius: 12px;
     outline: none;
     border: none;
@@ -138,7 +139,7 @@ body {
 .create-page {
     margin-left: 623px;
     text-align: center;
-    margin-top: 4.5rem;
+    margin-top: 72px;
     font-size: 27px;
 }
 
