--- a/Lenguaje de Marcas/PracticaCSS3/css/styles.css
+++ b/Lenguaje de Marcas/PracticaCSS3/css/styles.css
@@ -65,6 +65,7 @@ body {
     font-family: inherit;
     font-size: 33px;
     text-align: left;
+    caret-color: #1877f2;
 }
 
 .form input::placeholder {
